// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UU5.Bricks.Pre checkGrammar=false 1`] = `
<pre
  className="uu5-bricks-pre uu5-bricks-pre"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Pre checkGrammar=true 1`] = `
<pre
  className="uu5-bricks-pre uu5-bricks-pre"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Pre checkHighlight=false 1`] = `
<pre
  className="uu5-bricks-pre uu5-bricks-pre"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Pre checkHighlight=true 1`] = `
<pre
  className="uu5-bricks-pre uu5-bricks-pre"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Pre checkSpaces=false 1`] = `
<pre
  className="uu5-bricks-pre uu5-bricks-pre"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Pre checkSpaces=true 1`] = `
<pre
  className="uu5-bricks-pre uu5-bricks-pre"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Pre className="my-classname" 1`] = `
<pre
  className="uu5-bricks-pre uu5-bricks-pre my-classname"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Pre content="This is Content from ContentMixin" 1`] = `
<pre
  className="uu5-bricks-pre uu5-bricks-pre"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="This is Content from ContentMixin"
  />
</pre>
`;

exports[`UU5.Bricks.Pre content=12345 1`] = `
<pre
  className="uu5-bricks-pre uu5-bricks-pre"
  id="uuID"
  style={Object {}}
  title={null}
>
  12345
</pre>
`;

exports[`UU5.Bricks.Pre controlled=false 1`] = `
<pre
  className="uu5-bricks-pre uu5-bricks-pre"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Pre controlled=true 1`] = `
<pre
  className="uu5-bricks-pre uu5-bricks-pre"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Pre default props 1`] = `
<pre
  className="uu5-bricks-pre uu5-bricks-pre"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Pre disabled=false 1`] = `
<pre
  className="uu5-bricks-pre uu5-bricks-pre"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Pre disabled=true 1`] = `
<pre
  className="uu5-bricks-pre uu5-bricks-pre uu5-common-disabled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <span
    className="uu5-common-disabled-cover"
    key="disabledCover"
  />
</pre>
`;

exports[`UU5.Bricks.Pre dynamic=false 1`] = `
<pre
  className="uu5-bricks-pre uu5-bricks-pre"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Pre dynamic=true 1`] = `
<pre
  className="uu5-bricks-pre uu5-bricks-pre"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Pre hidden=false 1`] = `
<pre
  className="uu5-bricks-pre uu5-bricks-pre"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Pre hidden=true 1`] = `
<pre
  className="uu5-bricks-pre uu5-bricks-pre uu5-common-hidden"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Pre id="myId" 1`] = `
<pre
  className="uu5-bricks-pre uu5-bricks-pre"
  id="myId"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Pre ignoreHTML=false 1`] = `
<pre
  className="uu5-bricks-pre uu5-bricks-pre"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Pre ignoreHTML=true 1`] = `
<pre
  className="uu5-bricks-pre uu5-bricks-pre"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Pre mainAttrs=undefined 1`] = `
<pre
  className="uu5-bricks-pre uu5-bricks-pre"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Pre name="myName" 1`] = `
<pre
  className="uu5-bricks-pre uu5-bricks-pre"
  id="uuID"
  name="myName"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Pre noIndex=false 1`] = `
<pre
  className="uu5-bricks-pre uu5-bricks-pre"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Pre noIndex=true 1`] = `
<pre
  className="uu5-bricks-pre uu5-bricks-pre uu5-noindex"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Pre selected=false 1`] = `
<pre
  className="uu5-bricks-pre uu5-bricks-pre"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Pre selected=true 1`] = `
<pre
  className="uu5-bricks-pre uu5-bricks-pre uu5-common-selected"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Pre style="padding:8px; borderRadius: 2px" 1`] = `
<pre
  className="uu5-bricks-pre uu5-bricks-pre"
  id="uuID"
  style={
    Object {
      "borderRadius": "2px",
      "padding": "8px",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.Pre style={"backgroundColor":"red","color":"blue"} 1`] = `
<pre
  className="uu5-bricks-pre uu5-bricks-pre"
  id="uuID"
  style={
    Object {
      "backgroundColor": "red",
      "color": "blue",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.Pre textCorrector=false 1`] = `
<pre
  className="uu5-bricks-pre uu5-bricks-pre"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Pre textCorrector=true 1`] = `
<pre
  className="uu5-bricks-pre uu5-bricks-pre"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Pre tooltip="My Tooltip" 1`] = `
<pre
  className="uu5-bricks-pre uu5-bricks-pre"
  id="uuID"
  style={Object {}}
  title="My Tooltip"
/>
`;
